# lab_2_OS

./: CMakeLists.txt  main.cpp  menu.cpp  menu.h  prog1.cpp  prog1.h
lab2/: reader.cpp  writer.cpp
